fix: fixed web app authorization (#3)
* fix: fixed web app authorization

* fix: little param fixes

* Update server/routes/login/web-app.post.ts


---------
